cluster-go/lightspeed-benchmark/test-03/templates/2048-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
  name: puzzle2048
  namespace: ols-test-03
  labels:
    app: puzzle2048
    app.kubernetes.io/component: puzzle2048
    app.kubernetes.io/instance: puzzle2048
    app.kubernetes.io/name: puzzle2048
    app.openshift.io/runtime: nginx
    app.openshift.io/runtime-namespace: ols-test-03
spec:
  replicas: 2
  selector:
    matchLabels:
      app: puzzle2048
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: puzzle2048
        deployment: puzzle2048
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: puzzle2048
          image: 'quay.io/rh_ee_cschmitz/puzzle2048:latest'
          resources:
            limits:
              memory: 300Mi
            requests:
              memory: 100Mi
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
