cluster-go/lightspeed-benchmark/test-03/templates/2048-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: puzzle2048
  namespace: ols-test-03
spec:
  selector:
    app: puzzle2048
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
