cluster-go/lightspeed-benchmark/test-03/templates/2048-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: puzzle2048
  namespace: ols-test-03
  labels: {}
spec:
  to:
    kind: Service
    name: puzzle2048
  tls: {}
  port:
    targetPort: 8080
